--- a/project.html
+++ b/project.html
@@ -4,10 +4,18 @@
     <title>karate project</title>
   </head>
   <link rel="stylesheet" href="thao-lee-SRFUTeEZ9bM-unsplash (1).jpg" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">">
   <style>
     body {
-      font-style: italic;
-      color: white;
+
+  font-family: "Righteous", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+   body {
+         color: white;
       margin: 0px;
       padding: 0px;
       background-image: url("thao-lee-SRFUTeEZ9bM-unsplash\ \(1\).jpg");
@@ -26,9 +34,9 @@
     }
     .mid {
       display: block;
-      width: 36%;
-      margin: 34px auto;
-      top: 34px;
+      width: 50%;
+      margin: 10px auto;
+      top: 10px;
       border: 3px solid black;
       border-radius: 8px;
     }
@@ -93,9 +101,15 @@
       width: 34%;
       margin: 2px 165px;
     }
-    .container h1{
+    .container h1 {
       color: black;
     }
+    .btn{
+      font-family: "Righteous", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+    }
+
   </style>
   <body>
     <header class="header">
@@ -109,6 +123,7 @@
           <li><a href="#">ABOUT</a></li>
           <li><a href="#">HELP</a></li>
           <li><a href="#">CONTACT US</a></li>
+          <li><a href="#">TRAINERS</a></li>
         </ul>
       </div>
       <div class="right">
