--- a/project.html
+++ b/project.html
@@ -4,18 +4,20 @@
     <title>karate project</title>
   </head>
   <link rel="stylesheet" href="thao-lee-SRFUTeEZ9bM-unsplash (1).jpg" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">">
+  <link rel="stylesheet" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Righteous&display=swap"
+    rel="stylesheet"
+  />">
   <style>
     body {
-
-  font-family: "Righteous", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-   body {
-         color: white;
+      font-family: "Righteous", sans-serif;
+      font-weight: 400;
+      font-style: normal;
+    }
+    body {
+      color: white;
       margin: 0px;
       padding: 0px;
       background-image: url("thao-lee-SRFUTeEZ9bM-unsplash\ \(1\).jpg");
@@ -104,12 +106,11 @@
     .container h1 {
       color: black;
     }
-    .btn{
+    .btn {
       font-family: "Righteous", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+      font-weight: 400;
+      font-style: normal;
     }
-
   </style>
   <body>
     <header class="header">
@@ -144,7 +145,7 @@
           <input type="text" name="" placeholder="ENTER YOUR GENDER" />
         </div>
         <div class="form-group">
-          <input type="text" name="" placeholder="ENTER YOUR AGE" />
+          <input type="number" name="" placeholder="ENTER YOUR AGE" />
         </div>
         <button class="btn">SUBMIT</button>
       </form>
