--- a/prj2.html
+++ b/prj2.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" media="screen and (max-width:1800px)" href="css/phone.css">
     <link
       href="https://fonts.googleapis.com/css2?family=Jersey+25&family=Righteous&display=swap"
       rel="stylesheet"
@@ -18,10 +19,10 @@
         <img src="html/download (3).jpeg" alt="my online meal.com" />
       </div>
       <ul>
-        <li class="item"><a href="#">home</a></li>
-        <li class="item"><a href="#">services</a></li>
-        <li class="item"><a href="#">about us</a></li>
-        <li class="item"><a href="#">contact us</a></li>
+        <li class="item"><a href="#home">Home</a></li>
+        <li class="item"><a href="#services-container">Services</a></li>
+        <li class="item"><a href="#client-section">Our clients</a></li>
+        <li class="item"><a href="#contact">contact us</a></li>
       </ul>
     </nav>
     <section id="home">
@@ -33,7 +34,7 @@
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
       <button class="btn">Order Now</button>
     </section>
-    <section class="services-container">
+    <section id="services-container">
       <h1 class="h-primary center">Our Services</h1>
       <div id="services">
         <div class="box">
@@ -83,7 +84,6 @@
         <div class="client-item">
           <img src="html/download (2).png" alt="" />
         </div>
-      
       </div>
     </section>
   </body>
